<resources>
    <string name="AD_APP_ID" translatable="false">ca-app-pub-2116294942014135~8458949499</string>
    <string name="Ad_UNIT_ID_BANNER" translatable="false">ca-app-pub-2116294942014135/2601431230</string>
    <string name="app_name">HomeService</string>
    <string name="facebook_app_id">635717423558404</string>
    <string name="fb_login_protocol_scheme">fb635717423558404</string>
    <string name="rationale_ask_ok">Okay</string>
    <string name="cam_and_storage_rationale">Allow Seyanah-UAE to read your device photos or from camera</string>
    <string name="rationale_ask_cancel">Cancel</string>
    <string name="title_activity_upgarde_to_premium">UpgardeToPremiumActivity</string>
    <string name="from_gall">Choose From Gallery</string>
    <string name="logout_account">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="from_cam">Use Camera</string>
    <string name="app_name_root">Seyanah-uae</string>
    <string name="order_now">Order Now</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_login">Please login to send orderRequest</string>
    <string name="request_sent_success">Request sent success</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_cost">$200</string>
    <string name="order_data">25/5/19,</string>
    <string name="order_time">1:00 AM</string>
    <string name="order_state">Pending</string>
    <string name="select_service">Select Service</string>
    <string name="then_obtain_on_best_offers_from_service_providers">Then Obtain on best offers from service providers</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="login">Sign in</string>
    <string name="worker">Login as Worker</string>
    <string name="company">Login as company</string>
    <string name="skip">Skip</string>
    <string name="customer">Login as Customer</string>
    <string name="default_customer_name">Customer</string>
    <string name="send_request">Sending request</string>
    <string name="preview">Previewing Order</string>
    <string name="conf_requ_order">Confirm Order</string>
    <string name="enter_location">Select Location</string>
    <string name="desc">Description</string>
    <string name="elected_service">Selected Service Category</string>
    <string name="enterd_date">Selected Date</string>
    <string name="selected_location">Selected Location</string>
    <string name="selected_photos">Attached Photos</string>
    <string name="select_loc">Select location</string>
    <string name="add_clear_desc">Add clear description</string>
    <string name="select_time">Select time for orderRequest request</string>
    <string name="select_one_cat">Select one category as minimum</string>
    <string name="select_date">Select Date </string>
    <string name="attach_photos">Attach Photos</string>
    <string name="set_desc">Set Description</string>
    <string name="set_location">Set Location</string>
    <string name="error_enter_phone">Enter Phone</string>
    <string name="error_enter_name">Enter name in arabic</string>
    <string name="error_enter_english_name">Enter name is english</string>
    <string name="enter_pass">Enter Password</string>
    <string name="error_pass_donot_match">Password does not match</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="select_country">Select country</string>
    <string name="select_country2" >Select country</string>
    <string name="select_country2_arb">أختر دوله</string>
    <string name="select_city">Select city</string>
    <string name="select_city_dialog">Select city or more</string>
    <string name="enter_loc_address">Enter location address</string>
    <string name="enter_sms">Enter sms number</string>
    <string name="order_rate">Order rate</string>
    <string name="create_account">Sign up</string>
    <string name="phone_number">Phone number</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_an_account">Create an account?</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="save">Save</string>
    <string name="please_enter_sms_code">Please Enter SMS Code</string>
    <string name="resend_sms_code">Resend SMS Code</string>
    <string name="activate">Activate</string>
    <string name="enter_a_comment">Enter an offer</string>
    <string name="no_comments_yet">No comments yet</string>
    <string name="name_in_arabic">Name in Arabic</string>
    <string name="name_in_english">Name in English</string>
    <string name="select_location">Select Location</string>
    <string name="select_worker_type">Select Worker type</string>
    <string name="select_category">Select Category</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact Us</string>
    <string name="upgrade_to_premium">Upgrade to Premium</string>
    <string name="app_policy">App Policy</string>
    <string name="share_app">Share App</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="start_job">Start a Job</string>
    <string name="still_working">Still Working</string>
    <string name="finished_jobs">Finished Jobs</string>
    <string name="accept">Accept</string>
    <string name="add_photos_optional">Add photos (Optional)</string>
    <string name="add_one_or_more_photos_to_facilitate_problem_identification">Add one or more photos to facilitate problem identification</string>
    <string name="write_a_detailed_desc_for_problem_or_requested_service">Write a detailed description for problem or requested service</string>
    <string name="add_description">Add description</string>
    <string name="add_a_clear_description_for_your_problem_as_technical_support_can_understand_it_and_introduce_best_offers_for_you">Add a clear description for your problem, As technical support can understand it and introduce best offers for you</string>
    <string name="freelancer">Freelancer</string>
    <string name="enter_your_location_worker_location">Enter your address</string>
    <string name="enter_your_location_company_location">Company Headquarters</string>
    <string name="_20">+971</string>
    <string name="enter_ufllname">Enter FullName</string>
    <string name="working_request">Working Request</string>
    <string name="finished_requests">Finished Requests</string>
    <string name="orders">Orders</string>
    <string name="posts">Posts</string>
    <string name="please_wait">Please wait...</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="back">Back</string>
    <string name="enter_fullname">Enter FullName</string>
    <string name="lang_settings">Language Settings</string>
    <string name="select_lang_app">Select App Language</string>
    <string name="your_request_with">Your rorder request with </string>
    <string name="no_posts">No Posts Yet</string>
    <string name="no_orders">No Orders Yet</string>
    <string name="no_notification_yet">No Notificatios Yet</string>
    <string name="ok">Ok</string>
    <string name="enter_feedback">Enter feedback</string>
    <string name="submit">Submit</string>
    <string name="enter_feed">Please enter feedback</string>
    <string name="sent_success">Thank you</string>
    <string name="set_star">Set start one as min</string>
    <string name="your_offer_is">Your offer is</string>
    <string name="post_offers">Post Offers</string>
    <string name="title_1">fghfg</string>
    <string name="text_1">fghfgh</string>
    <string name="title_2">hjkhjk</string>
    <string name="duration_of_work">Duration of work:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="register_with_another_phone">Register with another phone?</string>
    <string name="previewcomment">Preview</string>
    <string name="_9_ebn_hany_el_andalosy_nasr_city_cairo_egypt">9 Ebn Hany El Andalosy Nasr City, Cairo-Egypt</string>
    <string name="you_are_already_submit_an_offer">You have submitted offer</string>
    <string name="enter_6_chars">Password is weak, please try another one. \n The password must be more than 6 characters, contains numbers, lowe-case letters, upper-case letters , for example Ahmed@2020</string>
    <string-array name="cate_list">
        <item>cate 1</item>
        <item>cate 2</item>
        <item>cate 3</item>
        <item>cate 4</item>
    </string-array>
    <string-array name="Q_list">
        <item>Select an answer</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://seyanah-uae.com/.well-known/assetlinks.json\" }]</string>
    <string name="no_working_requests">No working requests yet</string>
    <string name="no_finished_requests_yet">No finished requests yet</string>
    <string name="aed">AED</string>
    <string name="invalid_sms_code">Invalid sms code</string>
    <string name="pref_locale">ar</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="no_working_posts">No working posts</string>
    <string name="no_finished_jobs_yet">No finished jobs yet</string>
    <string name="enter">Sign in</string>
    <string name="edit">Edit</string>
    <string name="details_post">Post details</string>
    <string name="details_order">Order details</string>
    <string name="enter_arabic_name">Enter arabic name</string>
    <string name="enter_english_name">Enter english name</string>
    <string name="contact_us_address">United Arab Emirates - Abu Dhabi</string>
    <string name="contact_us_phone_num" translatable="false">+971 056 113 5658</string>
    <string name="contact_us_email">info@seyanah-uae.com</string>
    <string name="finish_work">Finish Work</string>
    <string name="can_not_edit_offer">
        This offer price does not include any materials required by the work,
        You can not edit this offer, once it has been sent </string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="default_notification_channel_id" translatable="false">MY_BEYOND_CHANNEL</string>
    <string name="forget_password">Forgot password?</string>
    <string name="new_password">Enter new password</string>
    <string name="conf_new_pass">Confirm new password</string>
    <string name="update_pass">Update password</string>
    <string name="your_last_order">Your last order needs to be rated, Before request any orders again....</string>
    <string name="you_offer_is">Your offer is</string>
    <string name="post_offer">Post offer:- </string>
    <string name="you_have">There are</string>
    <string name="offer">offers</string>
    <string name="you_are_deactivated">You have been deactivated from admin</string>
    <string name="logging_out">Logging out</string>
    <string name="quota_exceeded">Please try again later</string>
    <string name="registering_now">Registering</string>
</resources>