<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/transparent"
    android:padding="0dp">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="0dp"
        app:contentPadding="10dp"
        app:cardBackgroundColor="@color/transparent"
        android:layout_margin="6dp"
        app:cardCornerRadius="10dp"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"

            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg"
                android:padding="10dp"

                android:orientation="vertical">
                <EditText
                    android:id="@+id/etNewPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="left"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray3"
                    android:visibility="visible"

                    />

            </LinearLayout>

        <LinearLayout
            android:id="@+id/llTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg"
            android:padding="10dp"
            android:layout_marginTop="20dp"

            android:orientation="vertical">

            <EditText
                android:id="@+id/etConfNewPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="left"
                android:hint="@string/conf_new_pass"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray3"
                android:visibility="visible"

                />
        </LinearLayout>



            <Button
                android:id="@+id/btnUpdatePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_background1"
                android:text="@string/update_pass"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>