<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">


        <ImageView
            android:id="@+id/ivLogoStart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="0dp"
            android:src="@drawable/seyana_logo_no_bg" />


        <!--        <ImageView-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="100dp"-->
        <!--            android:src="@drawable/seyana_logo"-->
        <!--            android:visibility="visible" />-->

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/upgrate_to_premium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/upgrate_to_premium" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/upgrade_to_premium" />

                </LinearLayout>

                <!--        <View-->
                <!--            android:layout_width="match_parent"-->
                <!--            android:layout_height="0.44dp"-->
                <!--            android:layout_marginLeft="30dp"-->
                <!--            android:layout_marginRight="20dp"-->
                <!--            android:background="@color/gray_btn_bg_pressed_color" />-->

            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_contact_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_grey"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"


                    android:padding="3dp"
                    android:src="@drawable/phone_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/contact_us"

                    android:textSize="17sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.44dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:background="@color/gray_btn_bg_pressed_color" />

            <LinearLayout
                android:id="@+id/ll_app_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_grey"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp"
                android:visibility="visible">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/app_policy" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/app_policy"
                    android:textSize="17sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.44dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:background="@color/gray_btn_bg_pressed_color" />


            <LinearLayout
                android:id="@+id/ll_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_grey"
                android:clickable="true"

                android:focusable="true"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/about_us_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/about_us"
                    android:textSize="17sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.44dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:background="@color/gray_btn_bg_pressed_color" />


            <LinearLayout
                android:id="@+id/ll_share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_grey"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:padding="3dp"

                    android:src="@drawable/share_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/share_app"

                    android:textSize="17sp" />


                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.44dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/gray_btn_bg_pressed_color" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.44dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:background="@color/gray_btn_bg_pressed_color" />

            <LinearLayout
                android:id="@+id/ll_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_grey"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:src="@drawable/settings_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/settings"

                    android:textSize="17sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.44dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:background="@color/gray_btn_bg_pressed_color" />

            <LinearLayout
                android:id="@+id/ll_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/ripple_grey"
                android:clickable="true"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:padding="3dp"
                        android:src="@drawable/log_out_icon"

                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/log_out"
                        android:textSize="17sp" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.44dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/gray_btn_bg_pressed_color" />

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>