<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".activites.sms.EnterSmsCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="SMS Code"-->
        <!--android:textColor="@color/Black"-->
        <!--android:gravity="center"-->
        <!--android:textSize="20sp" />-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/please_enter_sms_code"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_bg"
            android:padding="6dp">
            <!--LightGrey2-->

            <com.alimuzaffar.lib.pin.PinEntryEditText
                android:id="@+id/etSmsCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:layoutDirection="ltr"
                android:maxLength="6"
                android:textIsSelectable="false" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/tvResendSmsCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/resend_sms_code"
                android:textAllCaps="false"
                android:textColor="@color/darkgray1"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tvActivate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rounded_bg_grayed"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:clickable="false"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:text="@string/activate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.44dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="@color/gray3" />

        <LinearLayout
            android:id="@+id/llRechangePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Register with another phone? "
                android:textColor="@color/Orange"
                android:textSize="18sp"

                />

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="0312012121"-->
            <!--android:textColor="@color/DimGray"-->


            <!--/>-->

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingLeft="5dp"-->
            <!--android:text="your number"-->
            <!--android:textColor="@color/Orange"-->
            <!--android:textSize="13sp"-->

            <!--/>-->
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>